# Ace-Escape

./: Cargo.toml
src/: asteroid.rs  asteroids.rs  enemy.rs  entities.rs  game.rs  lib.rs  main.rs  menu.rs  menu_example.rs  player.rs  splash_screen.rs  ui.rs
src/entities/: asteroid.rs  deimos.rs  enemy.rs  player.rs
src/old/: stepping.rs
src/references/: score.rs
src/templates/: bevy_plugin.rs
src/ui/: game_menu.rs  main_menu.rs  splash_screen.rs
src/ui/game_menu/: common.rs
