[package]
name = "ace-escape"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
